# device-setup

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  bootstrap.sh  index
bookmarks/: articles.md  books.md  texts.md  videos.md
content/: content.md
dash/: snippets.dash
dotfiles/: .agignore  .bash_profile  .bashrc  .eslintrc  .eslintrc.js  .ghci  .gitconfig  .gitignore  .gitignore_global  .hyper.js  .hyperterm.demo.js  .hyperterm.js  .hypterterm.demo.js  .npmrc  .slate  .tmux.conf  .vimrc  .zshrc  bootstrap.sh
exercises/: Cargo.toml
follow/: follow.md  news.md
iterm/: com.googlecode.iterm2.plist
memos/: git.md  rust.md  unix.md  web.md
news/: news.md  subscriptions.md
notes/: git-commands.md  programming-principles.md  rust-asynchronous-functions.md  rust-commands.md  rust-dependencies.md  unix-commands.md  vim-commands.md
practice/: Cargo.toml
reference/: git.md  programming.md  rust.md  unix.md  vim.md
remember/: git.md  rust.md  unix.md  vim.md
research/: research.md
scripts/: asciicast  build  check  clean  close  code-learning  cortex  create-js-project  desktop-setup  e2e  eden  edgar  end  flashcardbot  fullscreen  git-statuses  hideaway  learn  nova  nova-vim  openam-react-fe  practice-problems  project  quit  react-starter  repo  ropig  screencast  script-check  script-check-personal  script-check-work  script-clean  script-close  script-colors  script-cortex  script-cortex-api  script-cortex-clients  script-cortex-components  script-create-js-project  script-demo  (+86 more)
share/: share.md
src/: commands.rs  (+14 more)
(+287 files in other folders)
