[package]
name = "trevordmiller"
description = "Personal CLI"
version = "1.0.3"
readme = "README.md"
homepage = "https://github.com/trevordmiller/trevordmiller"
repository = "https://github.com/trevordmiller/trevordmiller"
license = "MIT OR Apache-2.0"
authors = ["trevordmiller"]
edition = "2018"

[dependencies]
structopt = "0.3.5"
dirs = "2.0.2"
termcolor = "1.1.0"
pulldown-cmark = "0.6.1"
